--- a/Player Analysis Website/vercel.json
+++ b/Player Analysis Website/vercel.json
@@ -1,8 +1,7 @@
 {
     "builds": [
       {
-        "src": "index.html",
-        "use": "@vercel/static"
+        "src": "index.html"
       }
     ]
   }
